# DeepLearningSandbox

./: .gitignore  README.md  build.ninja
multilayer_neural_net/: README.md
multilayer_neural_net/src/: CMakeLists.txt  main.cpp
multilayer_neural_net/src/layer/: Fc.hpp  Layer.hpp  Softmax.hpp
multilayer_neural_net/src/math/: Functions.hpp
multilayer_neural_net/src/network/: Network.hpp
multilayer_neural_net/src/types/: Types.hpp
util/cmake/: FindGLM.cmake
